@@ -18,7 +18,6 @@ import java.util.Optional;
 
 import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.APPROVED;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.RETURNED;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.unwrapElements;
@@ -37,7 +36,7 @@ public class DraftOrdersEventNotificationBuilder {
 
         List<Element<HearingOrder>> c21s = orders.stream()
             .filter(order -> !order.getValue().getType().isCmo())
-            .collect(toList());
+            .toList();
 
         //If CMO is the only approved/rejected order, then publish specific event for CMO (and generic for others)
         if (optionalCmo.isPresent()) {
@@ -51,20 +50,21 @@ public class DraftOrdersEventNotificationBuilder {
             }
         }
 
-        Map<CMOStatus, List<HearingOrder>> statusToOrder = orders.stream()
-            .map(Element::getValue)
-            .collect(groupingBy(HearingOrder::getStatus));
+        Map<CMOStatus, List<Element<HearingOrder>>> statusToOrder = orders.stream()
+            .collect(groupingBy(element -> element.getValue().getStatus()));
 
-        List<HearingOrder> approvedOrders = statusToOrder.getOrDefault(APPROVED, emptyList());
-        List<HearingOrder> rejectedOrders = statusToOrder.getOrDefault(RETURNED, emptyList());
+        List<Element<HearingOrder>> approvedOrders = statusToOrder.getOrDefault(APPROVED, emptyList());
+        List<Element<HearingOrder>> rejectedOrders = statusToOrder.getOrDefault(RETURNED, emptyList());
         List<ReviewCMOEvent> eventsToPublish = new ArrayList<>();
 
         if (!approvedOrders.isEmpty()) {
-            eventsToPublish.add(new DraftOrdersApproved(caseData, approvedOrders));
+            eventsToPublish.add(new DraftOrdersApproved(caseData,
+                unwrapElements(approvedOrders).stream().filter(order -> !order.isConfidentialOrder()).toList(),
+                approvedOrders.stream().filter(order -> order.getValue().isConfidentialOrder()).toList()));
         }
 
         if (!rejectedOrders.isEmpty()) {
-            eventsToPublish.add(new DraftOrdersRejected(caseData, rejectedOrders));
+            eventsToPublish.add(new DraftOrdersRejected(caseData, unwrapElements(rejectedOrders)));
         }
 
         return eventsToPublish;
@@ -78,7 +78,7 @@ public class DraftOrdersEventNotificationBuilder {
         eventsToPublish.add(new CaseManagementOrderRejectedEvent(caseData, cmo));
 
         if (anyC21sHaveStatus(c21s, APPROVED)) {
-            eventsToPublish.add(new DraftOrdersApproved(caseData, unwrapElements(c21s)));
+            eventsToPublish.add(new DraftOrdersApproved(caseData, unwrapElements(c21s), List.of()));
         }
 
         return eventsToPublish;
